// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb rendering renders correctly with an admin path 1`] = `
<nav
  aria-label="breadcrumb"
>
  <ol
    className="breadcrumb"
  >
    <li
      className="breadcrumb-item"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a
        href="/admin"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Game Systems
      </a>
    </li>
    <li
      className="breadcrumb-item"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a
        href="/admin/game-systems"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Dungeons & Dragons, 5e
      </a>
    </li>
    <li
      className="breadcrumb-item"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a
        href="/admin/game-systems/dnd-5e"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Modules
      </a>
    </li>
    <li
      className="breadcrumb-item"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a
        href="/admin/game-systems/dnd-5e/modules"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        SRD
      </a>
    </li>
    <li
      className="breadcrumb-item"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a
        href="/admin/game-systems/dnd-5e/modules/srd"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb rendering renders correctly with no arguments 1`] = `
<nav
  aria-label="breadcrumb"
>
  <ol
    className="breadcrumb"
  >
    <li
      className="breadcrumb-item"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a
        href="/"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        
      </a>
    </li>
    <li
      className="breadcrumb-item"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a
        href="//admin"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        admin
      </a>
    </li>
    <li
      className="breadcrumb-item"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a
        href="//admin/game-systems"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        game-systems
      </a>
    </li>
    <li
      className="breadcrumb-item"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a
        href="//admin/game-systems/dnd-5e"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        dnd-5e
      </a>
    </li>
    <li
      className="breadcrumb-item"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a
        href="//admin/game-systems/dnd-5e/modules"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        modules
      </a>
    </li>
    <li
      className="breadcrumb-item"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a
        href="//admin/game-systems/dnd-5e/modules/srd"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        srd
      </a>
    </li>
  </ol>
</nav>
`;
